syntax = "proto3";

package partyaffairs.api.partyaffairs.v1;

option go_package = "./v1;v1";

import "validate/validate.proto";

message ResourceClassify{
  uint32 id = 1;
  string name = 2;
  optional uint32 weight = 3;
  uint32 created_at = 4;
  uint32 updated_at = 5;
}

message AllResourceClassifyReply{
  repeated ResourceClassify list = 1;
}

message AddResourceClassifyRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  uint32 weight = 2[(validate.rules).uint32 = {gte: 0}];
}

message UpdateResourceClassifyRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string name = 2[(validate.rules).string = {min_len: 1}];
  uint32 weight = 3[(validate.rules).uint32 = {gte: 0}];
}

message DeleteResourceClassifyRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message ResourceContent{
  message File {
    string name = 1;
    string sha = 2;
    string url = 3;
  }
  uint32 id = 1;
  string title = 2;
  string desc = 3;
  string url = 4;
  uint32 download_count = 6;
  uint32 classify_id = 7;
  uint32 created_at = 8;
  uint32 updated_at = 9;
  ResourceClassify resource_classify = 10;
  File resource =  13;
}

message GetResourceContentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message PageResourceContentRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional uint32 classify_id = 3;
  optional string title = 4;
}

message PageResourceContentReply{
  uint32 total = 1;
  repeated ResourceContent list = 2;
}

message AddResourceContentRequest {
  string title = 1[(validate.rules).string = {min_len: 1}];
  string desc = 2[(validate.rules).string = {min_len: 1}];
  string url = 3[(validate.rules).string = {min_len: 1}];
  uint32 classify_id = 4[(validate.rules).uint32 = {gt: 0}];
}

message UpdateResourceContentRequest {
  string title = 1[(validate.rules).string = {min_len: 1}];
  string desc = 2[(validate.rules).string = {min_len: 1}];
  string url = 3[(validate.rules).string = {min_len: 1}];
  uint32 classify_id = 4[(validate.rules).uint32 = {gt: 0}];
  uint32 id = 5[(validate.rules).uint32 = {gt: 0}];
}

message DeleteResourceContentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}


